# openapi/openapi.yaml
@@ -16,7 +16,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Message'  # Исправлено
+                  $ref: '#/components/schemas/Message'
     post:
       summary: Create a new message
       tags:
@@ -27,14 +27,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Message'  # Исправлено
+              $ref: '#/components/schemas/Message'
       responses:
         '201':
           description: The created message
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Message'  # Исправлено
+                $ref: '#/components/schemas/Message'
     patch:
       summary: Update an existing message
       tags:
@@ -45,14 +45,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Message'  # Исправлено
+              $ref: '#/components/schemas/Message'
       responses:
         '200':
           description: The updated message
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Message'  # Исправлено
+                $ref: '#/components/schemas/Message'
     delete:
       summary: Delete a message
       tags:
@@ -67,6 +67,79 @@ paths:
       responses:
         '204':
           description: Message successfully deleted
+  /users:
+    get:
+      tags:
+        - users
+      summary: Get all users
+      operationId: getUsers
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+    post:
+      tags:
+        - users
+      summary: Create a new user
+      operationId: postUser
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+  /users/{id}:
+    patch:
+      tags:
+        - users
+      summary: Update a user by ID
+      operationId: patchUserById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+    delete:
+      tags:
+        - users
+      summary: Delete a user by ID
+      operationId: deleteUserById
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: No Content
+
 components:
   schemas:
     Message:
@@ -74,6 +147,16 @@ components:
       properties:
         id:
           type: integer
-          format: uint   # так как в БД айди это только положительные числа.
+          format: uint
         message:
+          type: string
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: uint
+        email:
+          type: string
+        password:
           type: string
